force-app/main/default/src/objects/PJN_Care_Plan_Timeline_Case_Field__mdt/PJN_Care_Plan_Timeline_Case_Field__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Care Plan Timeline
Purpose: Define the fields to be displayed for each case in the care plan timeline, based on case Status.
Metadata Relationship(s): Care Plan Timeline Case
Created by Mavens: Yes</description>
    <label>Care Plan Timeline Case Field</label>
    <pluralLabel>Care Plan Timeline Case Fields</pluralLabel>
</CustomObject>