force-app/main/default/src/objects/PJN_Care_Plan_Timeline_Case_Field__mdt/fields/PJN_Care_Plan_Timeline_Case__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan_Timeline_Case__c</fullName>
    <label>Care Plan Timeline Case</label>
    <referenceTo>PJN_Care_Plan_Timeline_Case__mdt</referenceTo>
    <relationshipLabel>Care Plan Timeline Case Fields</relationshipLabel>
    <relationshipName>PJN_Care_Plan_Timeline_Case_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>