force-app/main/default/src/objects/PJN_Care_Plan_Timeline_Case_Field__mdt/fields/PJN_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>